# PBT-Gym

./: .gitignore  CONTRIBUTING.md  CTHeadDataShowcase.ipynb  ParseCTImagetoGPU.ipynb  README.md  basicsTutorial.ipynb  patient.py  preprocessing.py  pyproject.toml  test.py
PBT-Gym/PBT Gym/: beam.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
notebooks/: CTHeadDataShowcase.ipynb  Final2DModel_v1.2.ipynb  bortfeld_dose_update.ipynb  test.ipynb
pbtgym/: __init__.py  beam.py  brain _region.py  brain_region.py  data_loader.py  dose_model.py  parallel_beam_env.py  pbt_gym.py  requirements.py  requirements.txt
pbtgym_old/: __init__.py  brain _region.py  parallelBeamEnv.py
