[build-system]
# Defined by PEP 518:
requires = ["flit"]
# Defined by this PEP:
build-backend = "flit.api:main"

[project]
name = "pbtgym"

# Using https://peps.python.org/pep-0639/
# which is still in draft
license = {text = "GNUGPL3"}
# Note: needed for Meson, but setuptools errors on it. Uncomment once Meson is default.
#license-files.paths = [
#    "LICENSE.txt",
#    "LICENSES_bundles.txt"
#]

description = "Fundamental package for array computing in Python"
authors = [{name = "Travis E. Oliphant et al."}]
maintainers = [
   {name = "NumPy Developers", email="numpy-discussion@python.org"},
]
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
   'Development Status :: 5 - Production/Stable',
   'Intended Audience :: Science/Research',
   'Intended Audience :: Developers',
   'License :: OSI Approved :: BSD License',
   'Programming Language :: C',
   'Programming Language :: Python',
   'Programming Language :: Python :: 3',
   'Programming Language :: Python :: 3.9',
   'Programming Language :: Python :: 3.10',
   'Programming Language :: Python :: 3.11',
   'Programming Language :: Python :: 3 :: Only',
   'Programming Language :: Python :: Implementation :: CPython',
   'Topic :: Software Development',
   'Topic :: Scientific/Engineering',
   'Typing :: Typed',
   'Operating System :: Microsoft :: Windows',
   'Operating System :: POSIX',
   'Operating System :: Unix',
   'Operating System :: MacOS',
]
dynamic = ["version", "scripts"]

[project.urls]
homepage = "https://numpy.org"
documentation = "https://numpy.org/doc/"
source = "https://github.com/numpy/numpy"
download = "https://pypi.org/project/numpy/#files"
tracker = "https://github.com/numpy/numpy/issues"
